# cjose

./: .clang-format  .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile.am  Makefile.in  README.md  aclocal.m4  cjose.pc.in  configure  configure.ac
.github/workflows/: archs.yml  build.yml  codeql-analysis.yml
CMakeModules/: FindCheck.cmake  FindJansson.cmake
doc/: Doxyfile.in  Makefile.am  Makefile.in
include/: Makefile.am  Makefile.in
include/cjose/: .jwk.h.swp  base64.h  cjose.h  error.h  header.h  jwe.h  jwk.h  jws.h  util.h  version.h.in
m4/: libtool.m4
platform/: Makefile.am  Makefile.in
platform/centos/: Makefile.in  build.sh  centos-6.x86_64.dockerfile  centos-7.x86_64.dockerfile  cjose.spec  fedora-24.x86_64.dockerfile  prepare.sh
platform/debian/: Makefile.am  Makefile.in  build.sh  debian-jessie.armhf.dockerfile  debian-jessie.x86_64.dockerfile  debian-wheezy.x86_64.dockerfile  prepare.sh  ubuntu-trusty.x86_64.dockerfile  ubuntu-xenial.x86_64.dockerfile
platform/debian/debian/: changelog.in  control  copyright  files  libcjose-dev.install  libcjose0.install
src/: Makefile.am  Makefile.in  base64.c  concatkdf.c  error.c  header.c  jwe.c  jwk.c  jws.c  util.c  version.c
src/include/: .jwk_int.h.swp  concatkdf_int.h  header_int.h  jwe_int.h  jwk_int.h  jws_int.h  util_int.h
test/: Makefile.am  Makefile.in  check_base64.c  check_cjose.c  check_cjose.h  check_concatkdf.c  check_header.c  check_jwe.c  check_jwk.c  check_jws.c  check_util.c  check_version.c
